# synaps-cad

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
assets/macos/: Info.plist
src/: app_config.rs  compiler.rs  export.rs  main.rs
src/compiler/: mod.rs  types.rs
src/compiler/evaluator/: booleans.rs  builtins.rs  mod.rs  primitives.rs  tests.rs  transformations.rs  value.rs
src/compiler/geometry/: conversions.rs  mod.rs
src/compiler/rendering/: colors.rs  fonts.rs  mod.rs
src/plugins/: ai_chat.rs  camera.rs  code_editor.rs  compilation.rs  mod.rs  persistence.rs  scene.rs  ui.rs
src/plugins/ui/: chat.rs  editor.rs  layout.rs  mod.rs  resources.rs  systems.rs  theme.rs  utils.rs  viewport.rs
tests/: generate_references.sh
tests/openscad_examples/: LICENSE
tests/openscad_examples/Basics/: dodecahedron_difference.scad  viral_planter.scad
tests/openscad_references/Advanced/: GEB.json  animation.json  assert.json  children.json  children_indexed.json  offset.json
tests/openscad_references/Basics/: CSG-modules.json  CSG.json  LetterBlock.json  dodecahedron_difference.json  hull.json  linear_extrude.json  logo.json  logo_and_text.json  projection.json  rotate_extrude.json  text_on_cube.json
tests/openscad_references/Functions/: functions.json
tests/openscad_references/Old/: example001.json  example002.json  example003.json  example004.json  example005.json  example006.json  example011.json  example012.json  example014.json  example016.json  example017.json  (+7 more)
(+2 files in other folders)
