[package]
name = "synaps-cad"
license = "GPL-3.0-or-later"
authors = ["Bernhard Janetzki <boerni@gmail.com>"]
repository = "https://github.com/ierror/synaps-cad"
homepage = "https://github.com/ierror/synaps-cad"
readme = "README.md"
version = "0.4.0"
edition = "2024"
publish = false

[dependencies]
bevy = "0.15"
bevy_egui = "0.33"
genai = "=0.6.0-beta.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
dirs = "6"
open = "5"
csgrs = { git = "https://github.com/timschmidt/csgrs", rev = "dca6d01", features = ["bmesh", "chull-io"] }
boolmesh = "0.1.5"
nalgebra = "0.34"
lib3mf = { version = "0.1.5", default-features = false }

# OpenSCAD parser
openscad-rs = "0.1.0"
rfd = "0.17.2"

[lints.rust]
# "deny" instead of "forbid" to allow #[allow(unsafe_code)] in ai_chat.rs where
# genai requires std::env::set_var (unsafe in edition 2024) for model listing.
# Revert to "forbid" if genai adds auth-resolver support for all_model_names().
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
too_many_lines = "allow"
